# utf16-ext

./: .travis.yml  Cargo.toml  LICENCE  README.md
src/: auto.rs  lib.rs  read.rs  write.rs
